[package]
name = "mdbook-footnote"
version = "0.1.0"
authors = ["David Drysdale <dmd@lurklurk.org>"]
edition = "2018"
license = "Apache-2.0"
description = "mdbook preprocessor for footnotes"
repository = "https://github.com/daviddrysdale/mdbook-footnote"
keywords = ["mdbook", "footnote"]
categories = ["text-processing"]

[dependencies]
clap = "2.*"
lazy_static = "1.*"
mdbook = "0.4.*"
regex = "1.*"
serde_json = "1.*"
