[package]
name = "mdbook-footnote"
version = "0.1.2"
authors = ["David Drysdale <dmd@lurklurk.org>"]
edition = "2018"
license = "Apache-2.0"
description = "mdbook preprocessor for footnotes"
repository = "https://github.com/daviddrysdale/mdbook-footnote"
keywords = ["mdbook", "footnote"]
categories = ["text-processing"]

[dependencies]
clap = "2.*"
env_logger = "0.9.*"
lazy_static = "1.*"
log = "0.4.*"
mdbook = "^0.4.28"
regex = "1.*"
serde_json = "1.*"
toml = "0.5.*"
